Bug Fixed: button text  was loding wrong font in Firefox

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: 'Arial',source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  font-family: 'Arial',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+}
